[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player/firstPesonController.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.399815, 1.25093, 0.427465 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.17756, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "wakeUp"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 0.450625, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 90, 0, 0 ), Vector3( 42.3508, 33.811, 44.8508 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 0.450625, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.17756, 0 ), Vector3( 0, 1.17756, 0 ), Vector3( 0, 1.52142, 0 ), Vector3( 0, 0.662908, 0 ) ]
}

[node name="Player" type="KinematicBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.00597382, 2.47488, 0.0119197 )
collision_mask = 14
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1.01616, 0, 0, 0, 1.01616, 0, 0, 0, 1.01616, 0, 0.316079, 0 )

[node name="FirstPerson" type="Camera" parent="Head"]
transform = Transform( 0.492048, 0, 0, 0, 0.492048, 0, 0, 0, 0.492048, 0.00855039, 0.594237, -0.00767587 )
fov = 90.0
size = 4.0

[node name="FlashLight" type="SpotLight" parent="Head"]
transform = Transform( 0.492048, 0, 0, 0, 0.492048, 0, 0, 0, 0.492048, 0, 0, 0 )
light_energy = 2.0
spot_range = 9.59199
spot_angle = 34.3174

[node name="playerAnims" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/wakeUp = SubResource( 2 )
